Closed Bug 1790203 Opened 2 years ago Closed 2 years ago

COEP Credentialless Origin-Trial crashes tab even without using COEP

Categories

(Core :: DOM: Core & HTML, defect, P2)

Firefox 104
defect

Tracking

()

VERIFIED FIXED
106 Branch
Tracking Status
firefox105 --- verified
firefox106 --- verified

People

(Reporter: niklas.fiekas, Assigned: emilio)

References

Details

Crash Data

Attachments

(1 file)

The current tab always/unconditionally crashes immediately when visiting either of

Both are served with

Origin-Trial: A11R4+BYwN6OiQqdWQQGBgNOtCTUAyhw3BRHhHxngWJmEmJNDBtNbTbnEXU/W645BTQKd+iHKXPGPFNKTnS9AB0AAABTeyJvcmlnaW4iOiJodHRwczovL2xpY2hlc3MuZGV2IiwiZmVhdHVyZSI6IkNvZXBDcmVkZW50aWFsbGVzcyIsImV4cGlyeSI6MTY3NTIwNTk0MH0=

as obtained from https://bugzilla.mozilla.org/show_bug.cgi?id=1790181.

Ugh, thanks, that's nasty.

https://crash-stats.mozilla.org/report/index/45b9c3a4-dcc7-454e-9d7a-325550220910

Sean, it seems this assert is failing and the WindowContext might be null, can you take a look?

Severity: -- → S2
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(sefeng)
Priority: -- → P2
See Also: → 1785115

And add test coverage for it (we only had coverage for the meta tag,
ugh).

Assignee: nobody → emilio
Status: NEW → ASSIGNED

Emilio got this.

Flags: needinfo?(sefeng)

Comment on attachment 9294147 [details]
Bug 1790203 - Fix COEP: Credentialless when enabled via origin-trial header. r=sefeng,smaug

Beta/Release Uplift Approval Request

  • User impact if declined: COEP: credentialless trial doesn't work. Patch is trivial (effectively a null-check + extra tests)
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: visit lichess.dev
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Effectively a null-check
  • String changes made/needed: none
  • Is Android affected?: Yes
Attachment #9294147 - Flags: approval-mozilla-release?
Attachment #9294147 - Flags: approval-mozilla-beta?
Flags: qe-verify+
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6cf3ab594db9
Fix COEP: Credentialless when enabled via origin-trial header. r=sefeng

(In reply to niklas.fiekas from comment #0)

Thanks a lot for the bug report! So the good thing is that, if you want to use the trial, you still can via the <meta> tag, and that should work.

Regressions: 1790289
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 106 Branch
QA Whiteboard: [qa-triaged]

Comment on attachment 9294147 [details]
Bug 1790203 - Fix COEP: Credentialless when enabled via origin-trial header. r=sefeng,smaug

Approved for 105.0rc1.

Attachment #9294147 - Flags: approval-mozilla-release?
Attachment #9294147 - Flags: approval-mozilla-release-
Attachment #9294147 - Flags: approval-mozilla-beta?
Attachment #9294147 - Flags: approval-mozilla-beta+

I was able to reproduce the issue on Nightly build.
Verified as fixed on Nightly 106.0a1(20220912094615).

Issue is not reproducing on Win10, Ubuntu 20.04 and Mac 10.13 using Nightly 106.0a1(20220912094615) and Beta 105.0(20220912145803).

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triaged]
Flags: qe-verify+

This is still showing up on crash-stats because people are using ancient Nightly versions, so I'll add the signature.

Crash Signature: [@ mozilla::dom::syncedcontext::Transaction<T>::Commit | mozilla::dom::Document::SetHeaderData ]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: