Bug 1790203 - Fix COEP: Credentialless when enabled via origin-trial header. r=sefeng, a=RyanVM

And add test coverage for it (we only had coverage for the meta tag,
ugh).

Differential Revision: https://phabricator.services.mozilla.com/D157054